| Bug #9665 | After registering MySQL service and starting with shared mem, cannot stop | ||
|---|---|---|---|
| Submitted: | 6 Apr 2005 4:35 | Modified: | 26 Apr 2005 2:52 |
| Reporter: | Lachlan Mulcahy | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.1.11bk | OS: | Microsoft Windows (Windows 2000 Server) |
| Assigned to: | Reggie Burnett | Target Version: | |
[6 Apr 2005 4:35]
Lachlan Mulcahy
[8 Apr 2005 17:40]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23808
[8 Apr 2005 23:56]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23815
[11 Apr 2005 16:29]
Reggie Burnett
Fixed in 4.1.12 and 5.0.4
[26 Apr 2005 2:44]
Paul DuBois
Noted in 4.1.12, 5.0.4 changelogs.
