Bug #9665  After registering MySQL service and starting with shared mem, cannot stop

Removed the extra set of the shared memory connect event from kill_mysql since it is also being set in kill_server